[package]
name = "greyjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.7.1"
async-trait = "0.1.57"
bytes = "1.2.1"
crossbeam = "0.8.2"
drop_guard = "0.3.0"
futures = "0.3.24"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }

[dev-dependencies]
console-subscriber = "0.1.8"
env_logger = "0.9.1"
